src/app.css
@import "tailwindcss";

@import 'tw-animate-css';

@custom-variant dark (&:where([data-theme="dark"], .dark, .dark *, [data-theme="dark"] *));

:root,
[data-theme="light"] {
  --background: hsl(40, 30%, 96%);
  --foreground: hsl(0deg 0% 9.8%);

  --card: hsl(0, 0%, 100%);
  --card-foreground: hsl(0deg 0% 9.8%);

  --popover: hsl(0 0% 100%);
  --popover-foreground: hsl(0deg 0% 9.8%);

  --primary: hsl(175, 84%, 32%);
  --primary-foreground: hsl(0deg 0% 92.16%);

  --secondary: hsla(240 4.8% 95.9%);
  --secondary-foreground: hsla(240 5.9% 10%);

  --tertiary: #20adee;
  --tertiary-foreground: hsl(0deg 0% 92.16%);

  --muted: hsl(0, 0%, 92%);
  --muted-foreground: hsl(220 8.9% 46.1%);

  --accent: hsl(344.79deg 33.25% 96.34%);
  --accent-foreground: hsl(220.9 39.3% 11%);
  --destructive: hsl(0 84.2% 60.2%);
  --destructive-foreground: hsl(0deg 0% 92.16%);

  /* proposed */
  /* --destructive: oklch(0.577 0.245 27.325);
    --destructive-foreground: oklch(0.985 0 0);
    --success: oklch(0.646 0.222 142.495);
    --success-foreground: oklch(0.985 0 0);
    --warning: oklch(0.828 0.189 84.429);
    --warning-foreground: oklch(0.145 0 0);
    --info: oklch(0.6 0.118 184.704);
    --info-foreground: oklch(0.985 0 0); */
  /* design kit vars */
  --primary-blue: hsla(201, 100%, 95%);
  --primary-purple: hsla(215, 49%, 93%);
  --primary-light: hsla(210, 33%, 98%);
  --primary-green: hsla(201, 100%, 95%);
  --primary-red: hsla(201, 100%, 95%);

  --border: hsl(220 13% 91%);
  --input: hsl(220 13% 91%);
  --input: oklch(.922 0 0);

  --dark: hsl(0deg 1.79% 21.96%);
  --dark-foreground: hsl(0deg 0% 92.16%);
  --ring: var(--primary, hsl(262.1 83.3% 57.8%));
  --radius: 0.75rem;
  --max-app-width: clamp(1280px, 80vw, 1920px);


  --sidebar: hsl(0deg 0% 96.86%);
  --sidebar-background: var(--card);
  --sidebar-foreground: var(--card-foreground);
  --sidebar-primary: var(--primary);
  --sidebar-primary-foreground: var(--primary-foreground);
  --sidebar-accent: var(--muted);
  --sidebar-accent-foreground: var(--muted-foreground);
  --sidebar-border: var(--border);
  --sidebar-ring: var(--ring);

  --noise-bg:url(/light-noise.svg),linear-gradient(hsl(40, 30%, 96%),hsl(40, 30%, 96%));

  --text-primary: hsl(0deg 0% 96.08%);
  --text-secondary: hsl(0deg 0% 9.8%);
  --text-tertiary: hsl(0deg 0% 9.8%);
  --bg-primary: hsl(0deg 0% 96.08%);
  --bg-secondary: hsl(0deg 0% 9.8%);
  --bg-tertiary: hsl(0deg 0% 9.8%);
  --bg-quaternary: hsl(0deg 0% 9.8%);
  --bg-button: hsl(0deg 0% 9.8%);
  --border-primary: hsla(0, 0%, 100%, 0.12);
  --border-secondary: hsla(0, 0%, 100%, 0.08);
  --button-shadow: 0px -1px 0px 0px hsla(0, 0%, 100%, 0.04), 0px 0px 0px 1px hsla(0, 0%, 100%, 0.12), 0px 0px 1px 0px rgba(0, 0, 0, 0.04), 0px 2px 2px 0px rgba(0, 0, 0, 0.04), 0px 4px 2px 0px rgba(0, 0, 0, 0.04), 0px 6px 3px 0px rgba(0, 0, 0, 0.04);

  /* Charts: Adjusted for harmony with the violet theme */
  --chart-1: hsl(262 80% 50%);
  --chart-2: hsl(199 89% 48%);
  --chart-3: hsl(340 75% 55%);
  --chart-4: hsl(160 84% 39%);
  --chart-5: hsl(43 90% 55%);
  --chart-6: hsl(27 87% 67%);
  --chart-7: hsl(188.74deg 94.5% 42.75%);
  --chart-8: hsl(33.3 5.5% 32.4%);
  --chart-9: hsl(84.8 85.2% 34.5%);
  --chart-10: hsl(191.6 91.4% 36.5%);
  --chart-11: hsl(161.4 93.5% 30.4%);
  --chart-12: hsl(174.7 83.9% 31.6%);
  --chart-13: hsl(262.1 83.3% 57.8%);
  --chart-14: hsl(333.3 71.4% 50.6%);
  --chart-15: hsl(346.8 77.2% 49.8%);

  /* syntax highlighting */
  --sh-class: #4d9ef6;
  /* Brighter blue for class */
  --sh-identifier: #6caedd;
  /* Lighter blue for identifiers */
  --sh-sign: #cdd3de;
  /* Lighter gray to ensure signs are visible */
  --sh-property: #3182ce;
  /* Brighter blue for properties */
  --sh-entity: #2db1bc;
  /* Lighter teal for entities */
  --sh-jsxliterals: #939dfd;
  /* Lighter purple for JSX literals */
  --sh-string: #26dabd;
  /* Lighter teal for strings */
  --sh-keyword: #ff6b6b;
  /* Brighter red for keywords */
  --sh-comment: #cbc3c3;
  /* Lighter gray for comments */
}
/* ... */

